added a new index seeded and mapped

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "elastic-graph",
   "version": "1.0.0",
-  "description": "",
+  "description": "simple graphing with elastic",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "seed": "node ./seedData/index.js",
+    "empty": "curl -X DELETE 'http://localhost:9200/_all'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "bmordan",
   "license": "ISC",
   "dependencies": {
     "elasticsearch": "^15.2.0",
